--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CapstoneSejahtera</string>
+    <string name="app_name">Sejahtera</string>
     <string name="default_web_client_id">401857591480-fndld1aeg7g09apo124be38lq4ji7fno.apps.googleusercontent.com</string>
     <string name="title_home">Home</string>
     <string name="title_keuangan">Keuangan</string>
