--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_keuangan">Keuangan</string>
     <string name="title_investasi">Investasi</string>
     <string name="title_profile">Profile</string>
+    <string name="news_image">GambarNews\n</string>
 </resources>
